HOWTO: update to mention installation of wbmus-repeater package

--- a/index.html
+++ b/index.html
@@ -842,6 +842,12 @@ this package we need to proceed with the following:</p></div>
 $ ./scripts/feeds install hpavcfg</pre>
 </div></div>
 <div class="paragraph"><p>The build system will have integrated these packages just like regular packages.</p></div>
+<div class="paragraph"><p>The OMS repeater software is also packaged in the dlan feeds repository and
+should be installed using the following:</p></div>
+<div class="literalblock">
+<div class="content monospaced">
+<pre>$ ./scripts/feeds install wmbus-repeater</pre>
+</div></div>
 </div>
 <div class="sect2">
 <h3 id="_1_4_building_openwrt">1.4) Building OpenWrt</h3>
@@ -1141,7 +1147,7 @@ $ /etc/init.d/wmbus-repeater start</pre>
 <div id="footer">
 <div id="footer-text">
 Version 1.0<br>
-Last updated 2012-11-22 22:35:46 CET
+Last updated 2013-04-30 08:51:24 CEST
 </div>
 </div>
 </body>
